# app/controllers/events_controller.rb
@@ -4,14 +4,23 @@ class EventsController < ApplicationController
   before_action :authenticate_user!, except: %i[index show]
   before_action :set_event, only: %i[show update destroy]
 
+
   def index
-    @events = Event.all
-    render json: @events
+    @events = Event.left_joins(:bets).select("events.*, COUNT(bets.id) AS bets_count").group("events.id")
+    render json: @events.as_json(
+      only: [:id, :name, :start_time, :odds, :status, :result],
+      methods: [:bets_count]
+    )
   end
+
 
   def show
     if @event
-      render json: @event
+      bets_count = @event.bets.count
+      render json: @event.as_json(
+        only: [:id, :name, :start_time, :odds, :status, :result],
+        methods: [:bets_count]
+      ).merge(bets_count: bets_count)
     else
       render json: { error: 'Event not found' }, status: :not_found
     end
@@ -19,26 +28,28 @@ class EventsController < ApplicationController
 
   def create
     @event = Event.new(event_params)
-    if @event.save
+
+    if @event.valid?  
+      @event.save
       render json: @event, status: :created
     else
       render json: { errors: @event.errors.full_messages }, status: :unprocessable_entity
     end
   end
 
+
+
   def update
-    if @event.nil?
-      render json: { error: 'Event not found' }, status: :not_found
-      return
-    end
+    return render json: { error: 'Event not found' }, status: :not_found if @event.nil?
 
     if @event.update(event_params)
-      process_bet_results if @event.saved_change_to_attribute?(:result)
+      process_bet_results(@event) if @event.saved_change_to_attribute?(:result)
       render json: @event
     else
       render json: { errors: @event.errors.full_messages }, status: :unprocessable_entity
     end
   end
+
 
   def destroy
     if @event
@@ -59,13 +70,20 @@ class EventsController < ApplicationController
     params.require(:event).permit(:name, :start_time, :odds, :status, :result)
   end
 
-  def process_bet_results
-    @event.bets.each do |bet|
-      new_status = bet.won? ? 'won' : 'lost'
-      bet.update!(status: new_status)
+  def process_bet_results(event)
+    return unless event.present?
 
-      redis = Redis.new(url: ENV['REDIS_URL'])
-      redis.publish('bet_status_updated', { bet_id: bet.id, status: new_status }.to_json)
+    event.bets.each do |bet|
+      new_status = bet.predicted_outcome == event.result ? 'won' : 'lost'
+
+      if bet.update(status: new_status)
+        Rails.logger.info "Bet #{bet.id} updated to #{new_status}"
+        redis = Redis.new(url: ENV['REDIS_URL'])
+        redis.publish('bet_status_updated', { bet_id: bet.id, status: new_status }.to_json)
+      else
+        Rails.logger.error "Failed to update bet #{bet.id}: #{bet.errors.full_messages.join(', ')}"
+      end
     end
   end
+
 end
